# nicorandompicker-v2

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  eslint.config.js  package.json  pnpm-lock.yaml  renovate.json5  rustfmt.toml  tsconfig.json  vite.config.ts  wrangler.toml
.github/: dependabot.yml  ghalint.yaml
.github/workflows/: ci.yml  deploy.yml
LICENSES/: LicenseRef-GitHub-Logo.txt
assets/: logo.af
frontend/: index.html
frontend/public/: site.webmanifest
frontend/src/: App.svelte  EmbeddedPlayer.svelte  SearchForm.svelte  ToastContainer.svelte  TurnstileVerification.svelte  VideoResultItem.svelte  api.ts  main.ts  notifications.svelte.ts  share.ts  storage.ts  styles.css  turnstileState.svelte.ts  types.ts  vite-env.d.ts
src/: api.rs  lib.rs  logic.rs  share_state.rs  snapshot.rs
src/api/: decode_share_state.rs  encode_share_state.rs  rate_limit.rs  restore_video_details.rs  search_video.rs  session.rs  turnstile.rs
src/share_state/: v1.rs
src/snapshot/: request.rs  response.rs
