[package]
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
name = "nicorandompicker-server"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7.6"
axum = { default-features = false, features = [
  "json",
  "macros",
  "query",
], version = "0.8.9" }
base64 = "0.22.1"
brotli = "8.0.2"
console_error_panic_hook = "0.1.7"
http = "1.4.0"
js-sys = "0.3.97"
nom = "8.0.0"
rand = { default-features = false, features = ["std_rng"], version = "0.10.1" }
reqwest = "0.13.3"
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
thiserror = "2.0.18"
time = { default-features = false, features = [
  "formatting",
  "parsing",
  "serde",
], version = "0.3.47" }
tower = { default-features = false, features = ["util"], version = "0.5.3" }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-web = "0.1.3"
worker = { features = ["axum", "http"], version = "0.8.1" }

[profile.release]
opt-level = "s"

[dev-dependencies]
pollster = "0.4.0"
proptest = "1.11.0"
time = { default-features = false, features = ["macros"], version = "0.3.47" }
